# AdInject

./: README.md
ad_server/: README.md  ad.py  enhance.py  requirements.txt  result_parser.py  run_server_os.sh  run_server_vwa.sh  server.py  styles.py
ad_server/html/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html
osworld_attack/: README.md  ad_server_adapter.py  batch_run.sh  batch_run_uitars.sh  lib_run_single.py  run.py  run_uitars.py
osworld_attack/evaluation_examples/: browser_file_server.sh  test_both.json  test_browser.json  test_web.json
osworld_attack/evaluation_examples/examples/browser/: 030eeff7-b492-4218-b312-701ec99ee0cc.json  (+16 more)
osworld_attack/mm_agents/: agent.py  prompts.py  uitars_agent.py
pages/src/pages/: index.mdx
webarena_attack/: README.md  ad.json  ad_server_adapter.py  attack_agentlab.py  batch_run_35.sh  batch_run_37.sh  batch_run_4o.sh  batch_run_ablation.sh  batch_run_benign.sh  batch_run_enhance_37.sh  batch_run_enhance_4o.sh  batch_run_inject.sh  batch_run_spec.sh  batch_run_virus.sh  batch_run_wo_atk_35.sh  batch_run_wo_atk_37.sh  batch_run_wo_atk_4o.sh  benign.json  config.py  injection.json  requirements.txt  simple_task_72.json  speculate.json  virus.json
webarena_attack/browsergym_fix/: env.py
webarena_attack/defense/: batch_defense.sh  batch_defense_sys.sh  defense.py
webarena_attack/defense/vwa_defense/: README.md  pyproject.toml
webarena_attack/defense/vwa_defense/src/browsergym/vwa_defense/: __init__.py  task.py
webarena_attack/probe/: batch_speculate.sh  speculate_user_query.py
(+26 files in other folders)
